fixed align left bug, cleaned all files from garbage lines. set one func to the align and change font

--- a/css/style.css
+++ b/css/style.css
@@ -350,6 +350,11 @@ footer {
     body.menu-open .btn-menu::before {
         content: 'X';
     }
+    
+    .upload-img {
+        margin-bottom: 10px;
+    }
+
     .main-content {
         flex-direction: column;
     }
